# ue-loc-tools

./: !loc-sync.bat  #create-venv-for-loc-sync.bat  .gitignore  LICENSE  README.md  add-file.py  add-source-files.py  add_file.py  base.config.yaml  base.debug-id-and-hash-loc-only.config.yaml  build-and-download.py  community-credits.py  community_credits.py  compl-rate.py  completion-rates.py  copy-edited-source-to-translated-pos.py  import-screens.py  loc-sync.py  locsync.py  mt-pseudo.py  p4-checkout.py  p4checkout.py  po-csv-converter.py  pyproject.toml  readme2.md  reimport-datatables.py  requirements.txt  sync-guide.md  targets.py  test-lang.py  test_lang.py  ue-gather-and-export.py  ue-import-and-compile.py  ue-loc-gather-cmd-2.py  ue-loc-gather-cmd.py  ue-loc-gather-commandlet.py  ue-reimport-assets.py  update-source-files.py  upload-source.py  upload_source.py
libraries/: crowdin.py  polib.py  task_runner.py  types.py  uetools.py  ueutilities.py  utilities.py
scripts/: manifests_to_patch_table.py
tasks/: __init__.py  build-and-download.py  build_and_download.py  community-credits.py  completion_rates.py  import-screens.py  mt_pseudo.py  p4_checkout.py  test_lang.py  ue_csv_excel_sync.py  ue_loc_gather_cmd.py  update-source-files.py  update_source_files.py
